# cxxclever

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/cxxclever/: test.h
src/: test.cpp
test/: main.cpp
